# FTA

./: .dockerignore  .gitignore  Dockerfile  README.md  fortran_grammer.md  install.sh
demo/CC-torch/: README.md  example-app.cpp  model.py
demo/CC-torch-class/: CMakeLists.txt  READMe.md  main.f90  model.cpp  utils.h  wrapper.f90
demo/fortran-CC/: README.md  class.cc  fc_demo  main.f90  module.f90
demo/fortran-CC-poly/: CMakeLists.txt  README.md  call_ts.cpp  call_ts.h  main.f90  wrapper.f90
demo/fortran-torch/: CMakeLists.txt  README.md  call_ts.cpp  call_ts.h  main.f90  wrapper.f90
doc/: bash.md  cuda.md  fortran.md  interoperability.md  wrf-torch coupling.pptx
src/: CMakeLists.txt  build.sh  configure.conf  main.f90  model.cpp  test_cpu.f90  test_gpu.f90  wrapper.f90
src/template/: cpp_body  cpp_header  fortran_extern_interface  fortran_header  fortran_interface
